fix: remove spacing under Category picture element

--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -14,6 +14,10 @@
 	.category-background {
 		width: 100%;
 		height: 100%;
+
+		img {
+			display: block;
+		}
 	}
 
 	.category-content {
